@@ -20,3 +20,25 @@ spotless {
         targetExclude '**/io/micronaut/scheduling/cron/CronExpression.java'
     }
 }
+
+multiRelease {
+    targetVersions 17, 19
+}
+
+tasks.named("compileJava19Java", JavaCompile) {
+    options.compilerArgs.addAll([
+            "--enable-preview",
+    ])
+}
+
+tasks.named("compileJava19TestJava", JavaCompile) {
+    options.compilerArgs.addAll([
+            "--enable-preview",
+    ])
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs = [
+            "--enable-preview",
+    ]
+}
